Java: improve WriteTextToFileTest