@@ -7,16 +7,32 @@ import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.util.Arrays;
 
-import static java.lang.System.out;
+import static java.nio.file.StandardOpenOption.APPEND;
+import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
+import static org.assertj.core.api.Assertions.assertThat;
 
 class WriteTextToFileTest {
 
     @Test
-    void files() throws IOException {
-        var p = Files.createTempFile("prefix-file_", ".suffix");
-        out.println(p);
-
+    void writeLinesToFile() throws IOException {
+        var path = Files.createTempFile(WriteTextToFileTest.class.getSimpleName(), ".tmp");
         var lines = Arrays.asList("FirstLine", "SecondLine");
-        Files.write(p, lines, Charset.defaultCharset());
+        Files.write(path, lines, Charset.defaultCharset());
+    }
+
+    @Test
+    void overwriteExistingFile() throws IOException {
+        var path = Files.createTempFile(WriteTextToFileTest.class.getSimpleName(), ".tmp");
+        Files.writeString(path, "abc", Charset.defaultCharset(), TRUNCATE_EXISTING);
+        Files.writeString(path, "xyz", Charset.defaultCharset(), TRUNCATE_EXISTING);
+        assertThat(Files.readString(path)).isEqualTo("xyz");
+    }
+
+    @Test
+    void appendExistingFile() throws IOException {
+        var path = Files.createTempFile(WriteTextToFileTest.class.getSimpleName(), ".tmp");
+        Files.writeString(path, "abc", Charset.defaultCharset(), TRUNCATE_EXISTING);
+        Files.writeString(path, "xyz", Charset.defaultCharset(), APPEND);
+        assertThat(Files.readString(path)).isEqualTo("abcxyz");
     }
 }
